--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
           "kind": "bin"
         }
       },
-      "args": [],
+      "args": ["123.45 €"],
       "cwd": "${workspaceFolder}"
     },
     {
