Update for Software Craft Luxembourg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,11 @@
   "markdown.marp.themes": ["./slides/dracula.css"],
   "cSpell.words": [
     "Deno",
-    "devday",
     "dracula",
     "Exercism",
     "Hodde",
     "Keyrock",
+    "luxembourg",
     "Macháček",
     "marp",
     "minmax",
